--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@distube/soundcloud": "^2.0.4",
     "@distube/spotify": "^2.0.2",
     "@distube/yt-dlp": "^2.0.1",
+    "body-parser": "^2.2.0",
     "discord.js": "^14.18.0",
     "distube": "^5.0.7",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "midtrans-client": "^1.4.2",
     "opusscript": "^0.0.8"
   }
 }
