--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "bot-dc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@discordjs/opus": "^0.10.0",
-    "@distube/soundcloud": "^2.0.4",
-    "@distube/spotify": "^2.0.2",
-    "@distube/yt-dlp": "^2.0.1",
-    "body-parser": "^2.2.0",
-    "discord.js": "^14.18.0",
-    "distube": "^5.0.7",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "midtrans-client": "^1.4.2",
-    "opusscript": "^0.0.8"
-  }
+    "name": "bot-dc",
+    "version": "1.0.0",
+    "description": "Discord top-up bot with Midtrans integration",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+        "discord",
+        "bot",
+        "topup",
+        "midtrans"
+    ],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^2.2.0",
+        "discord.js": "^14.14.1",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "midtrans-client": "^1.4.2"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    }
 }
