--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-    "name": "bot-dc",
-    "version": "1.0.0",
-    "description": "Discord top-up bot with Midtrans integration",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "discord",
-        "bot",
-        "topup",
-        "midtrans"
-    ],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^2.2.0",
-        "discord.js": "^14.14.1",
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0",
-        "midtrans-client": "^1.4.2"
-    },
-    "devDependencies": {
-        "nodemon": "^3.1.0"
-    },
-    "engines": {
-        "node": ">=18.0.0"
-    }
+  "name": "bot-dc",
+  "version": "1.0.0",
+  "description": "Discord top-up bot with Midtrans integration",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "topup",
+    "midtrans"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "midtrans-client": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
